--- a/HTMLearning.html
+++ b/HTMLearning.html
@@ -63,5 +63,17 @@ XHTML 1.0
                 空元素在开始标签中进行关闭（以开始标签的结束而结束）<br>
                 大多数 HTML 元素可拥有属性
         </p>
+        <!--
+            HTML 标签对大小写不敏感：<P> 等同于 <p>。许多网站都使用大写的 HTML 标签。
+            万维网联盟（W3C）在 HTML 4 中推荐使用小写，而在未来 (X)HTML 版本中强制使用小写。
+        -->
+        <h2>HTML属性</h2>
+            属性是 HTML 元素提供的附加信息。
+        <p>
+                HTML 元素可以设置属性 <br/>
+                属性可以在元素中添加附加信息 <br/>
+                属性一般描述于开始标签 <br/>
+                属性总是以名称/值对的形式出现，比如：name="value"。
+        </p>
      </body>
 </html>
